--- a/src/main/resources/Client/login.fxml
+++ b/src/main/resources/Client/login.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="net.kanten.client.loginController"
+            fx:controller="net.kanten.client.clientController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
