--- a/src/main/resources/Client/login.fxml
+++ b/src/main/resources/Client/login.fxml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.kanten.client.clientController">
-
+   <children>
+      <Pane prefHeight="50.0" prefWidth="600.0" AnchorPane.topAnchor="0.0" />
+      <SplitPane prefHeight="400.0" prefWidth="64.0" />
+      <ImageView fitHeight="50.0" fitWidth="200.0" layoutX="183.0" pickOnBounds="true" preserveRatio="true" />
+   </children>
 </AnchorPane>
