--- a/src/main/resources/Client/login.fxml
+++ b/src/main/resources/Client/login.fxml
@@ -3,10 +3,16 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.kanten.client.clientController">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.kanten.client.clientController">
    <children>
-      <AnchorPane prefHeight="64.0" prefWidth="600.0" />
-      <ImageView fitHeight="50.0" fitWidth="200.0" layoutX="300.0" pickOnBounds="true" preserveRatio="true" />
+      <AnchorPane prefHeight="64.0" prefWidth="600.0">
+         <children>
+            <ImageView fx:id="Logo" fitHeight="50.0" fitWidth="200.0" layoutX="200.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@/net.kanten.asstes" />
+               </image>
+            </ImageView>
+         </children></AnchorPane>
       <AnchorPane prefHeight="600.0" prefWidth="64.0" />
    </children>
 </AnchorPane>
