--- a/src/main/resources/Client/login.fxml
+++ b/src/main/resources/Client/login.fxml
@@ -9,7 +9,7 @@
          <children>
             <ImageView fx:id="Logo" fitHeight="50.0" fitWidth="200.0" layoutX="200.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@/net.kanten.asstes" />
+                  <Image url="@/assets/exatrek-text.png" />
                </image>
             </ImageView>
          </children></AnchorPane>
