--- a/src/main/resources/Client/login.fxml
+++ b/src/main/resources/Client/login.fxml
@@ -3,16 +3,14 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.kanten.client.clientController">
+
+<Pane xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.kanten.client.clientController">
    <children>
       <AnchorPane prefHeight="64.0" prefWidth="600.0">
-         <children>
-            <ImageView fx:id="Logo" fitHeight="50.0" fitWidth="200.0" layoutX="200.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@/assets/exatrek-text.png" />
-               </image>
-            </ImageView>
-         </children></AnchorPane>
+         <ImageView fx:id="Logo" fitHeight="50.0" fitWidth="200.0" layoutX="200.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="@/Client/assets/exatrek-text.png" />
+         </ImageView>
+      </AnchorPane>
       <AnchorPane prefHeight="600.0" prefWidth="64.0" />
    </children>
-</AnchorPane>
+</Pane>
