--- a/src/main/resources/Client/login.fxml
+++ b/src/main/resources/Client/login.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.kanten.client.clientController">
-   <children>
-      <AnchorPane prefHeight="64.0" prefWidth="600.0">
-         <ImageView fx:id="Logo" fitHeight="50.0" fitWidth="200.0" layoutX="200.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@assets/exatrek-text.png" />
-            </image></ImageView>
-      </AnchorPane>
-      <AnchorPane prefHeight="600.0" prefWidth="64.0" />
-   </children>
+<Pane minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.kanten.client.clientController">
+   <padding>
+      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+   </padding>
+   <AnchorPane prefHeight="64.0" prefWidth="600.0">
+      <ImageView fx:id="Logo" fitHeight="50.0" fitWidth="200.0" layoutX="200.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+         <Image url="@assets/exatrek-text.png" />
+      </ImageView>
+   </AnchorPane>
+   <Button fx:id="loginButton" layoutX="274.0" layoutY="145.0" mnemonicParsing="false" onAction="#Login" text="Login" />
+   <TextField fx:id="Username" layoutX="225.0" layoutY="75.0" />
+   <TextField fx:id="Password" layoutX="226.0" layoutY="107.0" />
 </Pane>
