--- a/src/main/resources/Client/login.fxml
+++ b/src/main/resources/Client/login.fxml
@@ -16,5 +16,5 @@
    </AnchorPane>
    <Button fx:id="loginButton" layoutX="274.0" layoutY="145.0" mnemonicParsing="false" onAction="#Login" text="Login" />
    <TextField fx:id="Username" layoutX="225.0" layoutY="75.0" />
-   <TextField fx:id="Password" layoutX="226.0" layoutY="107.0" />
+   <PasswordField fx:id="Password" layoutX="225.0" layoutY="107.0" />
 </Pane>
