--- a/src/main/resources/Client/userOverlay.fxml
+++ b/src/main/resources/Client/userOverlay.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane fx:id="root" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.kanten.client.overlayController">
+<Pane fx:id="root" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.kanten.client.overlayController">
     <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
     </padding>
@@ -14,16 +14,20 @@
             <Image url="@assets/exatrek-text.png" />
         </ImageView>
     </AnchorPane>
-   <TableView layoutX="25.0" layoutY="64.0">
+   <TableView fx:id="table" layoutX="25.0" layoutY="64.0" prefHeight="500.0">
      <columns>
-        <TableColumn maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="108.0" text="Name" />
-        <TableColumn maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="108.0" text="URL" />
-        <TableColumn maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="108.0" text="Username" />
-        <TableColumn maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="108.0" text="Password" />
-        <TableColumn maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="108.0" text="Information" />
+        <TableColumn fx:id="name" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="108.0" text="Name" />
+        <TableColumn fx:id="url" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="108.0" text="URL" />
+        <TableColumn fx:id="Username" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="108.0" text="Username" />
+        <TableColumn fx:id="Password" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="108.0" text="Password" />
+        <TableColumn fx:id="Information" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="108.0" text="Information" />
      </columns>
       <padding>
          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
       </padding>
    </TableView>
+   <ScrollBar layoutX="579.0" layoutY="64.0" orientation="VERTICAL" prefWidth="14.0" />
+   <Button layoutX="25.0" layoutY="574.0" mnemonicParsing="false" text="Button" />
+   <Button layoutX="92.0" layoutY="574.0" mnemonicParsing="false" text="Button" />
+   <Button layoutX="160.0" layoutY="574.0" mnemonicParsing="false" text="Button" />
 </Pane>
